[package]
name = "shaco"
version = "0.6.0"
edition = "2021"
description = "A League of Legends wrapper for the LCU REST & WS + the ingame API"
license = "MIT"
documentation = "https://docs.rs/shaco"
readme = "README.md"
homepage = "https://github.com/Leastrio/Shaco"
repository = "https://github.com/Leastrio/Shaco"

[dependencies]
sysinfo = { version = "0.30.5", default-features = false }
base64 = "0.21.0"
native-tls = "0.2.11"
futures-util = "0.3.25"
tokio = "1.24.2"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.91", features = ["raw_value"] }
serde-single-key-map = "0.1.0"
derive_more = { version = "0.99.17", features = ["display"] }

[dev-dependencies]
tokio = { version = "1.17.0", features = ["full"] }
